[gd_scene load_steps=39 format=2]

[ext_resource path="res://gui/life_meter/life_meter.gd" type="Script" id=1]
[ext_resource path="res://gui/life_meter/life_meter.png" type="Texture" id=2]
[ext_resource path="res://gui/life_meter/coin_ring.png" type="Texture" id=3]
[ext_resource path="res://gui/life_meter/meter_life_base.png" type="Texture" id=4]
[ext_resource path="res://gui/life_meter/coin_meter.png" type="Texture" id=5]
[ext_resource path="res://gui/life_meter/power_indicator.png" type="Texture" id=6]
[ext_resource path="res://gui/life_meter/coin_charge.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 72, 72, 36, 36 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 36, 72, 36, 36 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 0, 72, 36, 36 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 72, 36, 36, 36 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 36, 36, 36, 36 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 2 )
region = Rect2( 0, 36, 36, 36 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 36, 36 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 54 ), SubResource( 53 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 5 )
region = Rect2( 0, 12, 12, 12 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 5 )
region = Rect2( 0, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 5 )
region = Rect2( 0, 36, 12, 12 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 12, 12 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 5 )
region = Rect2( 0, 60, 12, 12 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 5 )
region = Rect2( 0, 72, 12, 12 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 12, 12 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 5 )
region = Rect2( 0, 36, 12, 12 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 5 )
region = Rect2( 0, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 5 )
region = Rect2( 0, 12, 12, 12 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "charge",
"speed": 0.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": false,
"name": "flash",
"speed": 15.0
} ]

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 62, 14 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 6 )
region = Rect2( 0, 14, 62, 14 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 6 )
region = Rect2( 0, 28, 62, 14 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 6 )
region = Rect2( 0, 42, 62, 14 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 6 )
region = Rect2( 0, 56, 62, 14 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 6 )
region = Rect2( 0, 70, 62, 14 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 6 )
region = Rect2( 0, 84, 62, 14 )

[sub_resource type="SpriteFrames" id=76]
animations = [ {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "charge",
"speed": 0.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "flash",
"speed": 15.0
} ]

[node name="LifeMeter" type="Control"]
rect_pivot_offset = Vector2( 35, 36 )
script = ExtResource( 1 )

[node name="MeterBase" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 4 )

[node name="Filler" type="AnimatedSprite" parent="MeterBase"]
z_index = -1
frames = SubResource( 2 )

[node name="CoinMeter" type="AnimatedSprite" parent="MeterBase/Filler"]
frames = SubResource( 47 )
animation = "flash"
frame = 6
playing = true
script = ExtResource( 7 )

[node name="CoinRing" type="Sprite" parent="MeterBase/Filler/CoinMeter"]
visible = false
texture = ExtResource( 3 )

[node name="PowerIndicator" type="AnimatedSprite" parent="."]
position = Vector2( -1, -23 )
z_index = 1
frames = SubResource( 76 )
animation = "charge"
playing = true
script = ExtResource( 7 )
